[package]
name = "static_site_generator"
version = "0.1.0"
authors = ["Jared Windover <jaredwindover@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-error = "0.0.4"
comrak = "0.9.0"
horrorshow = "0.8.3"
toml = "0.5"
serde = { version = "1.0", features = ["derive"]}