[package]
name = "static_site_generator"
version = "0.1.0"
authors = ["Jared Windover <jaredwindover@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
comrak = "0.9.0"
derive-error = "0.0.4"
horrorshow = "0.8.3"
nom = "7.0.0"
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
toml = "0.5"
yaml-rust = "0.4"

[features]
